# Qupiler

./: CMakeLists.txt  README.md  benchmark_config.yaml  compare_mlir_metrics.py  qiskit.ipynb  quantum_circuit.qasm  quantum_results.json  requirements.txt  run_benchmarks.sh  run_pipeline.sh  setup_benchmark.sh  simple_metrics_analyzer.py  unknown_results.json
backend/: ast_json_to_mlir.py  better_optimizer.py  circuit_generator.py  circuit_generator2.py  circuit_generator3.py  classical_to_quantum_translator.py  direct_ir_gen  direct_ir_gen.cpp  enhanced_dialect_module.py  enhanced_quantum_compiler.py  example_usage_script.py  extract_expected_hlo.py  extract_expected_result.py  gate_converter.py  gate_converter2.py  gate_optimizer.py  gate_optimizer2.py  gate_optimizer3.py  hardware_backend_integration.py  ir_gen  ir_gen.cpp  json_to_simplified_ast  json_to_simplified_ast.cpp  optimization_pipeline.py  optimizer.py  optimizer2.py  property_testing_framework.py  qmlir_ir.hpp  quantum_dialect.py  quantum_mlir_optimization_script.py  requirements.txt
backend/passes/: AncillaHoist.cpp  AncillaHoist.h  CommutativeCancellation.cpp  CommutativeCancellation.h  ConstantFolding.cpp  ConstantFolding.h  DeadAllocRemoval.cpp  DeadAllocRemoval.h  EliminateAdjacentCcx.cpp  EliminateAdjacentCcx.h  EliminateAdjacentCx.cpp  EliminateAdjacentCx.h  EliminateAdjacentX.cpp  EliminateAdjacentX.h  ExtendedConstantFolding.cpp  ExtendedConstantFolding.h  HighLevelFusion.cpp  HighLevelFusion.h  HighLevelFusionExtended.cpp  HighLevelFusionExtended.h  IdentityRemoval.cpp  IdentityRemoval.h  QuantumPasses.exports  quantum_fusion_pass.cpp  quantum_fusion_pass.h
dialect/: dialect.cpp  dialect.hpp  utils.cpp  utils.hpp
experiments/: add_test.c  and_test.c  ast.json  ast_sample.c  ast_sample.json  ast_sample.mlir  ast_sample_gate.mlir  ast_sample_gate_opt.mlir  ast_sample_opt.mlir  circuit.py  dec_test.c  div_test.c  div_test.json  div_test.mlir  div_test_gate.mlir  div_test_gate_opt.mlir  div_test_opt.mlir  inc_test.c  modulo_test.c  modulo_testing.c  modulo_testing.json  modulo_testing.mlir  modulo_testing_gate.mlir  modulo_testing_gate_opt.mlir  modulo_testing_opt.mlir  multi-test.c  negation_testing.c  negation_testing.json  negation_testing.mlir  negation_testing_gate.mlir  negation_testing_gate_opt.mlir  negation_testing_opt.mlir  not_test.c  or_test.c  output_ast.json  prototype_testing.c  qiskit_example.ipynb  simple.c  test_ast.c  while_testing.c
frontend/: frontend_driver  main.cpp  optimization_test.cpp
scripts/: ast_sample_qiskit.py  qmlir_to_qiskits.py  simple_qiskit_gen.py
tests/: ast_sample.c
tools/: optimization_test.cpp
